# FHE-Workspace

./: README.md  gitcmd.sh
bin_comp_test/: CMakeCache.txt  CMakeLists.txt  Makefile  bin_comp_test  bin_comp_test.cpp  cmake_install.cmake  deletetmp.sh
bubble_sort/: CMakeCache.txt  CMakeLists.txt  Makefile  bubble_sort  bubble_sort.cpp  cmake_install.cmake  interest_vector.csv
ctile_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ctile_test  ctile_test.cpp  lookup.csv  savegit.sh
ctxt_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ctxt_test  ctxt_test.cpp  lookup.csv
encryption_test/: CMakeCache.txt  CMakeLists.txt  encryption_test  test.cpp
encryption_test1/: Makefile  cmake_install.cmake
examples/encryption_test/: hello.cpp
manhattan_dist/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deletetmp.sh  interest_vector.csv  lookup.csv  manhattan_dist  manhattan_dist.cpp
manhattan_dist_backup/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lookup.csv  manhattan_dist_backup  manhattan_dist_backup.cpp
read_csv_test/: CMakeCache.txt  CMakeLists.txt  Makefile  bits.txt  bits_dec.txt  cmake_install.cmake  debug.txt  dec.txt  encdbtest.txt  interest_vector.csv  interest_vector_new.csv  op.txt  read  read_csv_test  read_csv_test.cpp  savegit.sh  sq_add_dbtest_new.txt  sqroot_ptxt.txt  subdbtest.txt  subptxt.txt  subsqdbtest.txt  subsqptxt.txt
sort_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deletetmp.sh  sort_test  sort_test.cpp
user_rec/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deletetmp.sh  user_rec  user_rec.cpp
